[project]
name = "loo-interact"
version = "0.1.0"
description = "Reverse-engineering and Python API project for the LOOI robot"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "CozmoCyke" }
]
license = { text = "Proprietary" }
dependencies = [
  "bleak>=0.22.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["looi"]
